Extend PokemonEntry fields and implement introduced SqlTupleSerializable interface